--- a/vue/practica/package.json
+++ b/vue/practica/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "bootstrap": "^5.1.3",
     "bootswatch": "^5.3.3",
     "core-js": "^3.8.3",
