--- a/api-prueba/package.json
+++ b/api-prueba/package.json
@@ -13,8 +13,8 @@
     "cors": "^2.8.5",
     "express": "^4.21.0",
     "mariadb": "^3.3.1",
-    "socket.io": "^2.3.0",
-    "node-os-utils": "^1.3.7"
+    "node-os-utils": "^1.3.7",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
